[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-dl"
version = "0.0.2"
authors = [
    {name = "Reuel Nixon", email = "reuelnixon@gmail.com"}
]
description = "Command-line tool for downloading media from Subreddits"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers =[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]

[project.urls]
"Bug Reports" = "https://github.com/ReuelNixon/reddit-dl/issues"
"Say Thanks!" = "https://saythanks.io/to/reuelnixon"
"Source" = "https://github.com/ReuelNixon/reddit-dl"

[project.scripts]
reddit-dl = "redditdl.__main__:main"